--- a/src/app/components/reports/reports.component.css
+++ b/src/app/components/reports/reports.component.css
@@ -1,5 +1,5 @@
 .container-own {
-  padding: 10px;
+  padding: 24px 25px;
   height: 100%;
   border-radius: 10px;
   background: #fff;
@@ -11,6 +11,15 @@
 
 p {
   white-space: nowrap;
+}
+
+#lineChart {
+  height: 210px !important;
+}
+
+.chart_con {
+  display: flex;
+  align-items: end;
 }
 
 /* .top {
@@ -101,9 +110,9 @@ p {
 
 .chart_con {
   flex: 1;
-  border-left: 1px solid #e0e0e0;
-  border-bottom: 1px solid #e0e0e0;
-  padding-bottom: 0.5rem;
+  border: 1px solid #e4e4e780;
+  border-radius: 15px;
+  padding: 10px;
   position: relative;
   height: 100%;
   min-width: 400px;
@@ -111,7 +120,7 @@ p {
 
 .chart_con::after {
   content: "";
-  position: absolute;
+  position: relative;
   top: 0;
   right: 0;
   background: linear-gradient(to left, white, transparent);
@@ -166,7 +175,6 @@ p {
 .bot {
   display: flex;
   gap: 1rem;
-  margin-top: 2rem;
   height: 100%;
 }
 
@@ -282,7 +290,7 @@ p {
 
 .message-count {
   position: absolute;
-  /* top: 20px; */
+  top: 20px;
   left: 20px;
 }
 
