--- a/src/app/components/reports/reports.component.html
+++ b/src/app/components/reports/reports.component.html
@@ -61,6 +61,61 @@
         </p>
       </div>
 
+      <div
+        style="
+          position: absolute;
+          right: 20px;
+          top: 50px;
+          color: #a3aed0;
+          display: flex;
+          align-items: center;
+          gap: 5px;
+          font-size: 12px;
+          z-index: 10;
+        "
+      >
+        <span
+          style="
+            color: #0aaf60;
+            background: #cff1e0;
+            padding: 5px 10px;
+            border-radius: 15px;
+          "
+        >
+          {{ percentChange }}%
+        </span>
+        vs yesterday
+      </div>
+
+      <div
+        style="
+          position: absolute;
+          left: 320px;
+          top: 20px;
+          transform: translateX(-50%);
+          display: flex;
+          gap: 15px;
+          font-size: 12px;
+        "
+      >
+        <span style="white-space: nowrap">
+          <img style="width: 18px" src="../../../assets/l1.png" />
+          Total Messages
+        </span>
+        <span style="white-space: nowrap">
+          <img style="width: 18px" src="../../../assets/l2.png" />
+          WhatsApp
+        </span>
+        <span style="white-space: nowrap">
+          <img style="width: 18px" src="../../../assets/l3.png" />
+          SMS
+        </span>
+        <span style="white-space: nowrap">
+          <img style="width: 18px" src="../../../assets/l4.png" />
+          Not Send
+        </span>
+      </div>
+
       <canvas id="lineChart"></canvas>
     </div>
   </div>
