--- a/src/app/screens/login/login.component.css
+++ b/src/app/screens/login/login.component.css
@@ -1,142 +1,160 @@
 .container-own {
-    padding: 2rem;
-    max-height: 100vh;
-    overflow: hidden;
-    gap: 1rem;
-    display: flex;
-    background-color: white;
-    margin: -2rem;
+  padding: 3rem;
+  max-height: 100vh;
+  overflow: hidden;
+  gap: 1rem;
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  margin: -2rem;
 }
 
 .left {
-    flex: 1;
-    background: url(../../../assets/img/login-bg.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 129%;
-    border-radius: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 5%;
+  width: 43%;
+  background: url(../../../assets/img/login-bg.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 129%;
+  border-radius: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5%;
 }
 
 .left img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .right {
-    flex: 1.5;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  padding: 0 2rem;
 }
 
 .form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: auto;
+  box-shadow: 0px 4px 20px 0px rgba(112, 144, 128, 0.2);
+  border-radius: 30px;
+  padding: 60px;
 }
 
 .form h1 {
-    font-size: 2.5rem;
-    font-weight: 500;
-    letter-spacing: 2px;
+  font-size: 2.5rem;
+  font-weight: 500;
+  letter-spacing: 2px;
+  font-family: DM sans;
 }
 
 .form h2 {
-    font-size: 1rem;
-    font-weight: 400;
-    color: #636364;
+  font-size: 14px;
+  font-weight: 500;
+  color: #636364;
 }
 
 .inp_con {
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-    width: 100%;
-    margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 100%;
+  margin-top: 2rem;
+}
+
+.form svg {
+  height: 15px;
+  width: 15px;
 }
 
 .inp_con label {
-    font-size: 1rem;
-    font-weight: 500;
-    color: #181818;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    justify-content: space-between;
+  font-size: 1rem;
+  font-weight: 500;
+  color: #181818;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  justify-content: space-between;
 }
 
 .inp_con label button {
-    border: none;
-    outline: none;
-    background-color: transparent;
-    color: #666666CC;
-    cursor: pointer;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  color: #666666cc;
+  cursor: pointer;
 }
 
 .inp_con input {
-    padding: 1rem;
-    border: 1px solid #00000040;
-    font-size: 1rem;
-    border-radius: 1rem;
+  padding: 1rem;
+  border: 1px solid #00000040;
+  font-size: 1rem;
+  border-radius: 1rem;
+}
+
+.inp_con input:focus {
+  outline: none;
+  border: 2px solid #2ebc96;
 }
 
 .rem_res {
-    margin-top: 2rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .remember {
-    display: flex;
-    gap: .3rem;
-    align-items: center;
+  display: flex;
+  gap: 0.3rem;
+  align-items: center;
 }
 
 .remember label {
-    font-size: .8rem;
-    font-weight: 500;
+  font-size: 0.8rem;
+  font-weight: 500;
 }
 
 .reset {
-    font-size: .8rem;
-    font-weight: 500;
+  font-size: 0.8rem;
+  font-weight: 500;
 }
 
-.form>button {
-    background: linear-gradient(to right, #24CC63, #1A9096);
-    padding: 1rem;
-    width: 100%;
-    margin-top: 2rem;
-    border-radius: 1rem;
-    color: white;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-size: 1rem;
+.form > button {
+  background: linear-gradient(to right, #24cc63, #1a9096);
+  padding: 1rem;
+  width: 100%;
+  margin-top: 2rem;
+  border-radius: 1rem;
+  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1rem;
 }
 
 .error {
-    font-size: .7rem;
-    color: red;
-    text-align: center;
-    margin-top: 2rem;
+  font-size: 0.7rem;
+  color: red;
+  text-align: center;
+  margin-top: 2rem;
 }
 
-.form>button:disabled {
-    cursor: not-allowed;
-    opacity: .7;
+.form > button:disabled {
+  cursor: not-allowed;
+  opacity: 0.7;
 }
 
 .dha {
-    font-size: .8rem;
-    margin-top: 2rem;
-    width: 100%;
-    font-weight: 500;
+  font-size: 16px;
+  margin-top: 2rem;
+  width: 100%;
+  font-weight: 500;
 }
