--- a/src/app/screens/messages/messages.component.css
+++ b/src/app/screens/messages/messages.component.css
@@ -176,7 +176,7 @@
   border: none;
   outline: none;
   background-color: white;
-  height: 250px;
+  /* height: 250px; */
   color: var(--text, #636364);
   font-family: Nunito;
   font-size: 1.1rem;
