--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -1,112 +1,53 @@
 <main class="content d-flex">
   <!-- Left Section -->
-  <div
-    class="tabs-container"
-    style="
+  <div class="tabs-container" style="
       width: 15%;
       box-shadow: 0px 4px 20px 0px rgba(112, 144, 128, 0.2);
       padding: 10px;
       border-radius: 10px;
-    "
-  >
+    ">
     <div class="tabs" style="min-width: fit-content">
       <div class="heading fs-6">Message Types</div>
-      <div
-        class="tab"
-        [class.active]="tab === 'booking'"
-        (click)="openMessageList('booking')"
-      >
+      <div class="tab" [class.active]="tab === 'booking'" (click)="openMessageList('booking')">
         Booking
       </div>
-      <div
-        class="tab"
-        [class.active]="tab === 'tracking'"
-        (click)="openMessageList('tracking')"
-      >
+      <div class="tab" [class.active]="tab === 'tracking'" (click)="openMessageList('tracking')">
         Tracking
       </div>
-      <div
-        class="tab"
-        [class.active]="tab === 'arrived'"
-        (click)="openMessageList('arrived')"
-      >
+      <div class="tab" [class.active]="tab === 'arrived'" (click)="openMessageList('arrived')">
         Arrived
       </div>
-      <div
-        class="tab"
-        [class.active]="tab === 'paylink'"
-        (click)="openMessageList('paylink')"
-      >
+      <div class="tab" [class.active]="tab === 'paylink'" (click)="openMessageList('paylink')">
         Paylink
       </div>
-      <div
-        class="tab"
-        [class.active]="tab === 'prepay'"
-        (click)="openMessageList('prepay')"
-      >
+      <div class="tab" [class.active]="tab === 'prepay'" (click)="openMessageList('prepay')">
         PrePay
       </div>
-      <div
-        class="tab"
-        [class.active]="tab === 'review'"
-        (click)="openMessageList('review')"
-      >
+      <div class="tab" [class.active]="tab === 'review'" (click)="openMessageList('review')">
         Review
       </div>
-      <div
-        class="tab"
-        [class.active]="tab === 'dreview'"
-        (click)="openMessageList('dreview')"
-      >
+      <div class="tab" [class.active]="tab === 'dreview'" (click)="openMessageList('dreview')">
         Driver
       </div>
-      <div
-        class="tab"
-        [class.active]="tab === 'noshow'"
-        (click)="openMessageList('noshow')"
-      >
+      <div class="tab" [class.active]="tab === 'noshow'" (click)="openMessageList('noshow')">
         No Show
       </div>
-      <div
-        class="tab"
-        [class.active]="tab === 'preauth'"
-        (click)="openMessageList('preauth')"
-      >
+      <div class="tab" [class.active]="tab === 'preauth'" (click)="openMessageList('preauth')">
         Pre Auth
       </div>
-      <div
-        class="tab"
-        [class.active]="tab === 'custom1'"
-        (click)="openMessageList('custom1')"
-      >
+      <div class="tab" [class.active]="tab === 'custom1'" (click)="openMessageList('custom1')">
         Custom 1
       </div>
-      <div
-        class="tab"
-        [class.active]="tab === 'custom2'"
-        (click)="openMessageList('custom2')"
-      >
+      <div class="tab" [class.active]="tab === 'custom2'" (click)="openMessageList('custom2')">
         Custom 2
       </div>
-      <div
-        class="tab"
-        [class.active]="tab === 'chatbot'"
-        (click)="openMessageList('chatbot')"
-      >
+      <div class="tab" [class.active]="tab === 'chatbot'" (click)="openMessageList('chatbot')">
         Chatbot
       </div>
-      <div
-        class="tab"
-        [class.active]="tab === 'missedcall'"
-        (click)="openMessageList('missedcall')"
-      >
+      <div class="tab" [class.active]="tab === 'missedcall'" (click)="openMessageList('missedcall')">
         Missed Calls
       </div>
-      <div
-        class="tab"
-        [class.active]="tab === 'late'"
-        (click)="openMessageList('late')"
-      >
+      <div class="tab" [class.active]="tab === 'late'" (click)="openMessageList('late')">
         Late
       </div>
     </div>
@@ -121,59 +62,36 @@
       </h1>
     </div>
     <div class="msg-boxes-container">
-      <div
-        class="msg-box"
-        *ngFor="
+      <div class="msg-box" *ngFor="
           let instance of currentMessageList.slice(
             0,
             currentMessageList.length - 1
           );
           let i = index;
           trackBy: trackByIndex
-        "
-      >
-        <div
-          style="
+        ">
+        <div style="
             width: 100%;
-            height: 350px;
+            height: 550px;
             display: flex;
             flex-direction: column;
-          "
-        >
+          ">
           <div class="ic_top d-flex justify-content-between align-items-center">
             <h4 class="fw-semibold">{{ currentList }} Message {{ i + 1 }}</h4>
             <div class="ict_right">
               <span class="limit_text" *ngIf="instanceData[i].isEditable">
                 {{ currentMessageList[i].length }} / 1024
               </span>
-              <button
-                *ngIf="!instanceData[i].isEditable"
-                class="edit btn btn-primary btn-sm"
-                style="background-color: transparent; box-shadow: none"
-                (click)="toggleEdit(instance, i)"
-              >
-                <img
-                  src="../../assets/icons/edit.svg"
-                  style="height: 20px"
-                  alt="e"
-                />
+              <button *ngIf="!instanceData[i].isEditable" class="edit btn btn-primary btn-sm"
+                style="background-color: transparent; box-shadow: none" (click)="toggleEdit(instance, i)">
+                <img src="../../assets/icons/edit.svg" style="height: 20px" alt="e" />
               </button>
             </div>
           </div>
-          <textarea
-            class="form-control"
-            placeholder="Type here..."
-            [(ngModel)]="currentMessageList[i]"
-            *ngIf="instanceData[i].isEditable"
-            maxlength="1024"
-          ></textarea>
-          <textarea
-            class="form-control"
-            placeholder="Type here..."
-            [(ngModel)]="currentMessageList[i]"
-            *ngIf="!instanceData[i].isEditable"
-            disabled
-          ></textarea>
+          <textarea class="form-control" placeholder="Type here..." [(ngModel)]="currentMessageList[i]"
+            *ngIf="instanceData[i].isEditable" maxlength="1024"></textarea>
+          <textarea class="form-control" placeholder="Type here..." [(ngModel)]="currentMessageList[i]"
+            *ngIf="!instanceData[i].isEditable" disabled></textarea>
           <div class="msg-btn-container" *ngIf="instanceData[i].isEditable">
             <button class="msg-btn" (click)="toggleEdit(instance, i)">
               Cancel
@@ -184,14 +102,11 @@
       </div>
     </div>
 
-    <div
-      class="imp-banner"
-      *ngIf="
+    <div class="imp-banner" *ngIf="
         instanceData[0].isEditable ||
         instanceData[1].isEditable ||
         instanceData[2].isEditable
-      "
-    >
+      ">
       <div><img src="../../../assets/info-icon.png" /> Important Note:</div>
       <p>
         Sending too many URLs can increase the risk of a WhatsApp account ban
@@ -208,47 +123,31 @@
       </h1>
     </div>
     <div class="instance_grid">
-      <div
-        class="instance_card"
-        style="height: 350px"
-        *ngFor="
+      <div class="instance_card" style="height: 225px" *ngFor="
           let instance of currentMessageList.slice(
             currentMessageList.length - 1,
             currentMessageList.length
           );
           let i = index;
           trackBy: trackByIndex
-        "
-      >
+        ">
         <div class="ic_top">
           <h4 class="fw-semibold">{{ instance.name }}Messages</h4>
           <div class="ict_right">
             <span class="limit_text" *ngIf="instanceData[3].isEditable">
               {{ currentMessageList[3].length }} / 1024
             </span>
-            <button
-              *ngIf="!instance.isEditable"
-              class="edit"
-              (click)="toggleEdit(instance, 3)"
-              style="box-shadow: none"
-            >
+            <button *ngIf="!instance.isEditable" class="edit" (click)="toggleEdit(instance, 3)"
+              style="box-shadow: none">
               <img src="../../assets/icons/edit.svg" alt="e" />
             </button>
           </div>
         </div>
 
-        <textarea
-          [(ngModel)]="currentMessageList[3]"
-          *ngIf="instanceData[3].isEditable"
-          placeholder="Type here..."
-          maxlength="1024"
-        ></textarea>
-        <textarea
-          disabled
-          *ngIf="!instanceData[3].isEditable"
-          [(ngModel)]="currentMessageList[3]"
-          placeholder="Type here..."
-        ></textarea>
+        <textarea rows="10" [(ngModel)]="currentMessageList[3]" *ngIf="instanceData[3].isEditable"
+          placeholder="Type here..." maxlength="1024"></textarea>
+        <textarea disabled *ngIf="!instanceData[3].isEditable" [(ngModel)]="currentMessageList[3]"
+          placeholder="Type here..."></textarea>
 
         <!-- <textarea
         class="form-control"
