--- a/src/styles.css
+++ b/src/styles.css
@@ -27,12 +27,14 @@ body {
 
 
 
-
-@media screen and (max-width: 1400px) {
+html {
+        font-size: 80%;
+    }
+/* @media screen and (max-width: 1400px) {
     html {
         font-size: 75%;
     }
-}
+} */
 
 ::-webkit-scrollbar {
     width: 3px;
