--- a/src/app/screens/block-list/block-list.component.html
+++ b/src/app/screens/block-list/block-list.component.html
@@ -100,7 +100,7 @@
     <div class="left">
       <div class="inp_con">
         <label for="">Phone</label>
-        <input type="tel" [(ngModel)]="phone" />
+        <input type="tel" [(ngModel)]="phone" placeholder="" />
       </div>
       <div class="inp_con">
         <label for="">Target</label>
