--- a/src/app/screens/messages/messages.component.css
+++ b/src/app/screens/messages/messages.component.css
@@ -272,6 +272,7 @@
   gap: 10px;
   /* flex-wrap: wrap; */
   padding: 0 10px;
+  height: 520px;
 }
 
 .msg-box {
@@ -322,6 +323,8 @@
   font-family: "DM Sans";
   display: flex;
   padding: 10px;
+  width: 246px !important;
+  margin: auto;
 }
 
 .emoji-tab div {
@@ -329,6 +332,7 @@
   border-right: 2px solid rgba(255, 255, 255, 0.4);
   padding-left: 10px;
   padding-right: 10px;
+  margin-left: 10px;
 }
 
 .emoji-tab.active-tab {
