--- a/src/app/screens/bot-settings/bot-settings.component.html
+++ b/src/app/screens/bot-settings/bot-settings.component.html
@@ -71,20 +71,20 @@
         </button>
       </div>
     </div>
-    <div class="c-bg-heading">Post code list</div>
+    <div class="c-bg-heading">Postcode list</div>
     <div class="p-c-l">
       <div class="p-c-l-i">
         <div class="p-c-l-i-con">
           <label for="">Outcode:</label>
-          <input [(ngModel)]="outcode" type="text" />
+          <input placeholder="CB1" [(ngModel)]="outcode" type="text" />
         </div>
         <div class="p-c-l-i-con">
           <label for="">Sector:</label>
-          <input [(ngModel)]="sector" type="text" />
+          <input placeholder="3" [(ngModel)]="sector" type="text" />
         </div>
         <div class="p-c-l-i-con">
           <label for="">Unit:</label>
-          <input [(ngModel)]="unit" type="text" />
+          <input placeholder="SD" [(ngModel)]="unit" type="text" />
         </div>
       </div>
       <div class="p-c-l-btns">
