--- a/src/app/screens/messages/messages.component.html
+++ b/src/app/screens/messages/messages.component.html
@@ -165,7 +165,7 @@
               >
                 <img
                   src="../../assets/edit-pen.png"
-                  style="height: 20px"
+                  style="height: 15px; width: 15px"
                   alt="e"
                 />
               </button>
@@ -268,7 +268,11 @@
               (click)="toggleEdit(instance, 3)"
               style="box-shadow: none"
             >
-              <img src="../../assets/edit-pen.png" alt="e" />
+              <img
+                src="../../assets/edit-pen.png"
+                alt="e"
+                style="height: 15px; width: 15px"
+              />
             </button>
           </div>
         </div>
