--- a/src/app/screens/block-list/block-list.component.html
+++ b/src/app/screens/block-list/block-list.component.html
@@ -1,5 +1,5 @@
 <div class="container-own">
-  <!-- <div *ngIf="showBanner" class="top">
+  <div *ngIf="showBanner" class="top">
     <div class="top_t">
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -13,16 +13,14 @@
           fill="#636364"
         />
       </svg>
-      <span>Import Message</span>
+      <span>Import Message:</span>
     </div>
     <p>
-      Please note that “not sent” , might be because target is not valid mobile
-      or international number or your settings are configured not be send this
-      Message type by SMS.
+      Adding phone numbers to blocked list will prevent that number from
+      receiving WhatApp and/or SMS.
       <br />
-      <br />
-      Device sending is limited to avoid bans , these limits are gradually
-      reduced to mitigate that risk.
+      Add the number below and select the message types you do not want the
+      number to receive.
     </p>
     <button (click)="this.showBanner = false">
       <svg
@@ -41,7 +39,7 @@
         />
       </svg>
     </button>
-  </div> -->
+  </div>
   <div class="table-top">
     <div class="tt-left">
       <button
@@ -92,30 +90,130 @@
             fill="#5C5E64"
           />
         </svg>
-        <input type="number" placeholder="Search number here.." />
+        <input
+          type="text"
+          [formControl]="numberControl"
+          maxlength="12"
+          (keypress)="restrictInput($event)"
+          placeholder="+44 090481937"
+        />
       </div>
+      <button (click)="toggleVisibility()">
+        <img
+          style="height: 15px; width: 15px"
+          src="../../../assets/add-number.png"
+        />Add Number
+      </button>
     </div>
   </div>
-  <div class="add-con">
+  <div class="add-con" *ngIf="isVisible">
+    <button
+      (click)="toggleVisibility()"
+      style="
+        border: 1px solid lightgray;
+        border-radius: 3px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: fit-content;
+        padding: 2px;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+      "
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="11"
+        height="11"
+        viewBox="0 0 11 11"
+        fill="none"
+      >
+        <path
+          d="M9.9751 9.675L0.892618 1.32498M9.9751 1.32498L0.892618 9.675"
+          stroke="#2EBC96"
+          stroke-width="1.2975"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+      </svg>
+    </button>
+    <div
+      style="
+        background: #d5f2ea;
+        border: 1px solid rgba(46, 188, 150, 0.5);
+        border-radius: 20px;
+        width: 800px;
+        padding: 1rem;
+        display: flex;
+        gap: 5px;
+      "
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="20"
+        height="20"
+        viewBox="0 0 20 20"
+        fill="none"
+      >
+        <path
+          d="M9 5H11V7H9V5ZM10 15C10.55 15 11 14.55 11 14V10C11 9.45 10.55 9 10 9C9.45 9 9 9.45 9 10V14C9 14.55 9.45 15 10 15ZM10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM10 18C5.59 18 2 14.41 2 10C2 5.59 5.59 2 10 2C14.41 2 18 5.59 18 10C18 14.41 14.41 18 10 18Z"
+          fill="#636364"
+        />
+      </svg>
+      <p style="margin-bottom: 0">
+        <span style="font-weight: 600">Note: </span>
+        Here you can add specific phone numbers to stop them from receiving
+        WhatsApp or SMS
+      </p>
+    </div>
     <div class="left">
       <div class="inp_con">
-        <label for="">Phone</label>
-        <input type="tel" [(ngModel)]="phone" placeholder="" />
+        <label for="">Phone Number</label>
+        <input
+          [(ngModel)]="phone"
+          type="text"
+          [formControl]="numberControl"
+          maxlength="12"
+          (keypress)="restrictInput($event)"
+          placeholder="+44 090481937"
+        />
       </div>
-      <div class="inp_con">
-        <label for="">Target</label>
-        <select [(ngModel)]="type">
+      <div>
+        <label
+          style="
+            color: #fff;
+            font-size: 0.8rem;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+            margin-bottom: 0.2rem;
+          "
+          for=""
+          >Target Type</label
+        >
+        <div class="inp_con_target_type">
+          <div style="display: flex; gap: 5px">
+            <label for="">WhatsApp</label>
+            <!-- <select [(ngModel)]="type">
           <option value="">Select Target</option>
           <option value="both">Both</option>
           <option value="sms">SMS</option>
           <option value="whatsapp">WhatsApp</option>
-        </select>
+        </select> -->
+            <div class="switch_box" [class.active]="true"></div>
+          </div>
+          <div style="display: flex; gap: 5px">
+            <label for="">SMS</label>
+            <div class="switch_box" [class.active]="false"></div>
+          </div>
+        </div>
       </div>
       <button
         [disabled]="!phone || isLoad || !type"
         (click)="addBlacklistUser()"
       >
-        Save
+        Add
       </button>
     </div>
   </div>
