--- a/src/app/screens/devices/devices.component.css
+++ b/src/app/screens/devices/devices.component.css
@@ -346,6 +346,11 @@ strong {
   background: linear-gradient(180deg, #1a9096 0%, #2ebc96 100%), #fff;
   box-shadow: 0px 4.038px 10.095px 0px rgba(0, 0, 0, 0.15);
   transition: 250ms;
+  color: white;
+}
+
+.menu li.active p:last-child {
+  font-size: 16px;
 }
 
 .menu li .icon {
@@ -458,7 +463,6 @@ strong {
 }
 
 .reports {
-  height: 344px;
   width: 100%;
 }
 
@@ -1065,8 +1069,8 @@ tr {
 /* Set specific column widths */
 .a_table th:nth-child(1),
 .a_table td:nth-child(1) {
-  width: 270px;
-  min-width: 270px;
+  width: 350px;
+  min-width: 350px;
 } /* Created At */
 .a_table th:nth-child(2),
 .a_table td:nth-child(2) {
@@ -1097,7 +1101,7 @@ tr {
 .a_table td:nth-child(7) {
   width: 350px; /* Set a fixed width */
   max-width: 350px; /* Ensure it doesn't exceed this width */
-  overflow: hidden; /* Hide overflowing text */
+  overflow-x: hidden; /* Hide overflowing text */
   text-overflow: ellipsis; /* Show "..." at the end */
   white-space: nowrap; /* Keep text on one line */
   display: block;
@@ -1174,10 +1178,25 @@ tr {
   align-items: center;
   border: none;
   cursor: pointer;
+  position: relative;
 }
 
 .device-btn-container button img {
   width: 15px;
+}
+
+.device-btn-container button:hover img:nth-child(2) {
+  display: block;
+}
+
+.device-btn-container button img:nth-child(2) {
+  width: auto;
+  position: absolute;
+  bottom: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 50px;
+  display: none;
 }
 
 .qr-banner-container {
@@ -1284,6 +1303,10 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+.a_top h4 {
+  font-size: 34px;
+}
+
 .a_top button {
   padding: 10px;
   border-radius: 8px;
@@ -1350,5 +1373,55 @@ input[type="number"] {
 
 .a_top button.filter {
   border-radius: 8px;
-  border: 1px solid black;
+}
+
+.msg_cell {
+  position: relative;
+  height: 50px;
+}
+
+.msg_cell div {
+  position: absolute;
+  display: none;
+  width: 290px;
+  height: fit-content;
+  background: #01010199;
+  backdrop-filter: blur(10px);
+  white-space: wrap;
+  z-index: 10;
+  padding: 5px;
+  border-radius: 10px;
+}
+
+.msg_cell td {
+  width: 350px; /* Set a fixed width */
+  max-width: 350px; /* Ensure it doesn't exceed this width */
+  overflow-x: hidden; /* Hide overflowing text */
+  text-overflow: ellipsis; /* Show "..." at the end */
+  white-space: nowrap; /* Keep text on one line */
+  display: block;
+}
+
+.msg_cell div p {
+  color: #fff;
+  font-family: "DM Sans";
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 166.667% */
+  letter-spacing: -0.24px;
+  margin-bottom: 0;
+  position: relative;
+}
+
+.msg_cell div img {
+  position: absolute;
+  height: 15px;
+  top: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.msg_cell:hover div {
+  display: block;
 }
