--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -61,6 +61,7 @@
           </li>
         </a>
         <a
+          *ngIf="haveBot"
           [routerLink]="'/chatbot/analytics'"
           (click)="setCurrentSubItem('Analytics')"
         >
