--- a/src/app/screens/home/home.component.html
+++ b/src/app/screens/home/home.component.html
@@ -7,6 +7,7 @@
         [totalMsg]="totalMsg"
         [totalSms]="totalSms"
         [totalWhatsapp]="totalWhatsapp"
+        [notSent]="notSent"
         [percentChange]="percentChange"
       ></app-reports>
       <!-- <app-reports></app-reports> -->
@@ -259,17 +260,27 @@
           </div>
           <!-- <video src="../../../assets/videos/search.mp4" autoplay="true" muted="true" loop="true"></video> -->
         </div>
-        <div class="a_table">
-          <div class="at_item at_item_head">
-            <div>Created Date</div>
-            <div>Target Type</div>
-            <div>Target</div>
-            <div>Message Type</div>
-            <div>Sent Via</div>
-            <div>Status</div>
-            <div style="width: 250px">Messages</div>
-          </div>
-          <div>
+        <table class="a_table">
+          <thead>
+            <tr class="at_item at_item_head">
+              <td>Created Date</td>
+              <td>Target Type</td>
+              <td>Target</td>
+              <td>Message Type</td>
+              <td>Sent Via</td>
+              <td>Status</td>
+              <td
+                style="
+                  width: 375px !important;
+                  max-width: 375px !important;
+                  min-width: 375px !important;
+                "
+              >
+                Messages
+              </td>
+            </tr>
+          </thead>
+          <tbody>
             <div
               *ngIf="messageList.length == 0"
               style="
@@ -281,9 +292,9 @@
             >
               No data found.
             </div>
-            <div class="at_item" *ngFor="let item of messageList">
-              <div>{{ item.createdAt | date : "dd/MM/y, h:mma" }}</div>
-              <div
+            <tr class="at_item" *ngFor="let item of messageList">
+              <td>{{ item.createdAt | date : "dd/MM/y, h:mma" }}</td>
+              <td
                 [ngStyle]="{
                   color: item.target_type === 'whatsapp' ? '#2EBC96' : '#3981F7'
                 }"
@@ -294,10 +305,10 @@
                   WhatsApp
                 </ng-container>
                 <ng-template #smsText>SMS</ng-template>
-              </div>
-              <div>+{{ item.to_number }}</div>
-              <div style="text-transform: capitalize">{{ item.msg_type }}</div>
-              <div>
+              </td>
+              <td>+{{ item.to_number }}</td>
+              <td style="text-transform: capitalize">{{ item.msg_type }}</td>
+              <td>
                 <span style="color: #3981f7" *ngIf="item.sent_by === 0"
                   >SMS</span
                 >
@@ -305,13 +316,13 @@
                   WhatsApp
                 </span>
                 <span *ngIf="item.sent_by === 2">None</span>
-              </div>
-              <div>
+              </td>
+              <td>
                 <p
                   [ngClass]="item.status === 'sent' ? 's_dot_r' : 's_dot_g'"
                 ></p>
                 {{ item.status }}
-              </div>
+              </td>
               <div class="msg_cell">
                 <td>
                   {{ item.message_text }}
@@ -321,9 +332,9 @@
                   <p>{{ item.message_text }}</p>
                 </div>
               </div>
-            </div>
-          </div>
-        </div>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
     <div class="devices">
